--- a/css/index.css
+++ b/css/index.css
@@ -183,9 +183,10 @@
         height: 45px;
     }
 
-    h1 {
+    h2 {
         color: white;
         margin: auto;
+        font-size: 26px;
     }
 
     .domain, .tick {
