--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-    body {
+    /* body {
         background-color: black;
         font-family: "Montserrat";
         overflow: hidden;
@@ -192,4 +192,4 @@
     .domain, .tick {
         color: white;
         opacity: 0.5;
-    }
+    } */
