--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .graphic__vis__1 svg {
-  border: 1px dashed white;
+  /* border: 1px dashed white; */
   top: 50%;
   position: relative;
   -webkit-transform: translateY(-50%);
@@ -230,5 +230,9 @@ body::-webkit-scrollbar-thumb:hover {
   margin: auto;
   display: none;
   opacity: 0.8;
+}
+
+path.domain {
+  visibility: hidden;
 }
 
