--- a/css/style.css
+++ b/css/style.css
@@ -48,18 +48,9 @@ body::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
-#separator {
-  position: relative;
-  display: flex;
-  /* background-image: url("../img/ru.PNG"); */
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: contain; 
-  background-position: center;  
-  background-color: black;
-}
-
-#separator1 {
+#separator,
+#separator1,
+#separator2{
   position: relative;
   display: flex;
   /* background-image: url("../img/ru.PNG"); */
@@ -71,18 +62,23 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .graphic,
-.graphic1 {
+.graphic1,
+.graphic2 {
   position: relative;
   width: 100%;
 }
 
 .graphic__prose,
-.graphic__prose__1 {
+.graphic__prose__1,
+.graphic__prose__2 {
+  display: block;
   position: relative;
   font-size: 14px;
+  right: 5px;
   z-index: 99;
-  background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
 }
+
 
 .graphic__vis {
   position: absolute;
@@ -96,7 +92,8 @@ body::-webkit-scrollbar-thumb:hover {
   z-index: 99;
 }
 
-.graphic__vis__1 {
+.graphic__vis__1,
+.graphic__vis__2 {
   position: absolute;
   top: 0;
   -webkit-transform: translate3d(0, 0, 0);
@@ -123,6 +120,15 @@ body::-webkit-scrollbar-thumb:hover {
   transform: translateY(-50%);
 }
 
+.graphic__vis__2 svg {
+  /* border: 1px dashed white; */
+  top: 50%;
+  position: relative;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
 .graphic__vis.is-fixed {
   position: fixed;
 }
@@ -138,6 +144,16 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .graphic__vis__1.is-bottom {
+  top: auto;
+  bottom: 0;
+}
+
+.graphic__vis__2.is-fixed {
+  position: fixed;
+  top: 5px;
+}
+
+.graphic__vis__2.is-bottom {
   top: auto;
   bottom: 0;
 }
@@ -170,7 +186,8 @@ body::-webkit-scrollbar-thumb:hover {
   width: 600px;
 }
 
-#ch1_div {
+#ch1_div,
+#ch2_div {
   font-size: 24px;
   text-align: center;
   margin: auto;
@@ -182,7 +199,43 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .trigger {
+  position: relative;
+  padding: 0px;
+  /* text-align: center; */
+  /* line-height: 100px; */
+  /* height: 1000px; */
+  font-size: 16px;
+}
+
+p {
+  position: relative;
+  margin: 0px;
+  top: 40px;
+  font-size: 14px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  /* box-shadow: 0px 1px 2px #232323, 0px -1px 2px #232323; */
   padding: 10px;
+  text-align: right;
+}
+
+#timeline {
+  position: absolute;
+  right: 0px;
+  z-index: 100;
+}
+
+.axisWhite line{
+  stroke: gray;
+}
+
+.axisWhite path{
+  stroke: gray;
+  opacity: 0;
+}
+
+.axisWhite text{
+  fill: white;
 }
 
 #hover_description {
@@ -216,6 +269,40 @@ body::-webkit-scrollbar-thumb:hover {
   height: 200px;
 }
 
+#perm {
+  position: absolute;
+  bottom: 5px;
+  left: 20px;
+  z-index: 100;
+  font-size: 12px;
+  background-color: rgba(0, 0, 0, 0);
+  padding: 8px;
+  border-radius: 3px;
+}
+
+#perm2 {
+  position: absolute;
+  width: 200px;
+  height: 80px;
+  bottom: 0px;
+  left: 200px;
+  z-index: 9999;
+  font-size: 12px;
+  background-color: rgba(0, 0, 0, 0);
+  padding: 8px;
+  border-radius: 3px;
+}
+
+#ind_line {
+  position: absolute;
+  left: 20px;
+  z-index: 100;
+  width: 10px;
+  height: 1px;
+  background: white;
+}
+
+
 #details {
   position: absolute;
   font-size: 12px;
@@ -232,7 +319,47 @@ body::-webkit-scrollbar-thumb:hover {
   opacity: 0.8;
 }
 
-path.domain {
+/* path.domain {
   visibility: hidden;
+} */
+
+.airport {
+  fill: white;
+  opacity: 1;
+  stroke: gray;
+  stroke-width: 0.5;
+}
+
+.flight {
+  fill: none;
+  /* stroke: #7C8BD5; */
+  stroke: white;
+  stroke-width: 0.4;
+  stroke-opacity: 0.3;
+}
+
+.voronoi {
+  fill: none;
+  stroke: none;
+  stroke-width: 1px;
+}
+
+.highlight {
+  opacity: 1 !important;
+  stroke: orange !important;
+  stroke-width: 1.5px !important;
+  stroke-opacity: 0.8 !important;
+}
+
+g#voronoi2 {
+  pointer-events: all;
+}
+
+#tooltip {
+  font-size: 10pt;
+  font-weight: 900;
+  fill: white;
+  text-shadow: 1px 1px 0 #252525, 1px -1px 0 #252525, -1px 1px 0 #252525,
+    -1px -1px 0 #252525;
 }
 
