--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 .button1 {
   background-color: white; 
   color: black; 
-  border: 3px solid #04AA6D;
+  /* border: 3px solid #04AA6D; */
 }
 
 .button1:hover {
