--- a/css/style.css
+++ b/css/style.css
@@ -128,8 +128,9 @@ body::-webkit-scrollbar-thumb:hover {
   font-size: 14px;
   right: 5px;
   z-index: 99;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
+
 
 
 .graphic__vis {
@@ -262,13 +263,44 @@ body::-webkit-scrollbar-thumb:hover {
 p {
   position: relative;
   margin: 0px;
-  top: 40px;
+  top: 30px;
   font-size: 14px;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   /* box-shadow: 0px 1px 2px #232323, 0px -1px 2px #232323; */
   padding: 10px;
   text-align: right;
+}
+
+#more_info {
+  position: relative;
+  z-index: 999;
+  background-color: black; 
+  border: none;
+  color: gray;
+  padding: 2px 5px;
+  text-align: right;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#timeline {
+  pointer-events: none;
+}
+
+.additional-content {
+  position: relative;
+  text-align: right;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0px;
+  padding-top: 0px;
+
+}
+
+.hidden {
+  display: none;
 }
 
 #timeline {
@@ -350,8 +382,8 @@ p {
   left: 20px;
   z-index: 100;
   width: 10px;
-  height: 1px;
-  background: white;
+  height: 2px;
+  background: red;
 }
 
 
