--- a/css/style.css
+++ b/css/style.css
@@ -356,20 +356,20 @@ p {
 #perm {
   position: absolute;
   bottom: 5px;
-  left: 20px;
+  left: 5px;
   z-index: 100;
   font-size: 12px;
   background-color: rgba(0, 0, 0, 0);
   padding: 8px;
   border-radius: 3px;
+  opacity: 0;
 }
 
 #perm2 {
   position: absolute;
   width: 200px;
-  height: 80px;
-  bottom: 0px;
-  right: 200px;
+  top: 50px;
+  height: 200px;
   z-index: 9999;
   font-size: 12px;
   background-color: rgba(0, 0, 0, 0);
