--- a/css/style.css
+++ b/css/style.css
@@ -265,10 +265,11 @@ p {
   margin: 0px;
   top: 30px;
   font-size: 14px;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
   border-radius: 5px;
   /* box-shadow: 0px 1px 2px #232323, 0px -1px 2px #232323; */
-  padding: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
   text-align: right;
 }
 
@@ -278,11 +279,11 @@ p {
   background-color: black; 
   border: none;
   color: gray;
-  padding: 2px 5px;
+  padding-right: 0px;
   text-align: right;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
   cursor: pointer;
 }
 
@@ -367,7 +368,7 @@ p {
 
 #perm2 {
   position: absolute;
-  width: 200px;
+  width: 300px;
   top: 50px;
   height: 200px;
   z-index: 9999;
