--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-#contentCapsule{
+#contentCapsule {
   height: 100%;
   width: 100%;
   position: absolute;
@@ -20,16 +20,17 @@ body {
   overflow: hidden;
 }
 
-#description{
+#description {
   font-size: larger;
   position: relative;
   padding-left: 100px;
   padding-right: 100px;
 }
 
-.button{
+.button {
   position: relative;
-  background-color: #04AA6D; /* Green */
+  background-color: #04AA6D;
+  /* Green */
   border: none;
   color: white;
   padding: 8px 20px;
@@ -44,8 +45,8 @@ body {
 }
 
 .button1 {
-  background-color: white; 
-  color: black; 
+  background-color: white;
+  color: black;
   /* border: 3px solid #04AA6D; */
 }
 
@@ -102,14 +103,14 @@ body::-webkit-scrollbar-thumb:hover {
 
 #separator,
 #separator1,
-#separator2{
+#separator2 {
   position: relative;
   display: flex;
   /* background-image: url("../img/ru.PNG"); */
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: contain; 
-  background-position: center;  
+  background-size: contain;
+  background-position: center;
   background-color: black;
 }
 
@@ -220,14 +221,15 @@ body::-webkit-scrollbar-thumb:hover {
 #mage {
   position: relative;
   height: 420px;
-  transition: transform .2s; /* Animation */
+  transition: transform .2s;
+  /* Animation */
   -webkit-box-shadow: 0 0 8px 1px #868686;
   -moz-box-shadow: 0 0 8px 1px #868686;
   box-shadow: 0 0 8px 1px #868686;
 }
 
 #mage:hover {
-  transform: scale(1.1); 
+  transform: scale(1.1);
 }
 
 .tick line {
@@ -276,7 +278,7 @@ p {
 #more_info {
   position: relative;
   z-index: 999;
-  background-color: black; 
+  background-color: black;
   border: none;
   color: gray;
   padding-right: 0px;
@@ -310,16 +312,16 @@ p {
   z-index: 100;
 }
 
-.axisWhite line{
+.axisWhite line {
   stroke: gray;
 }
 
-.axisWhite path{
+.axisWhite path {
   stroke: gray;
   opacity: 0;
 }
 
-.axisWhite text{
+.axisWhite text {
   fill: white;
 }
 
@@ -350,7 +352,7 @@ p {
 
 #break {
   position: relative;
-  top:0px;
+  top: 0px;
   height: 200px;
 }
 
@@ -448,3 +450,67 @@ g#voronoi2 {
     -1px -1px 0 #252525;
 }
 
+a {
+  color: steelblue
+}
+
+#info_button {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 4px 20px;
+  text-align: center;
+  font-size: 20px;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+#info_button:hover {
+  background-color: #006297
+}
+
+h3 {
+  color: white;
+  border-radius: 3px;
+  margin: auto;
+  background-color: #091f40;
+  font-size: 22px;
+  padding: 5px;
+}
+
+#peace_process {
+  overflow-y: auto;
+  background-color: rgb(30, 30, 30);
+  color: white;
+  position: fixed;
+  top: 45px;
+  z-index: 900;
+  border-radius: 5px;
+}
+
+#peace_title_div {
+  text-align: center;
+  position: fixed;
+  border-radius: 5px;
+}
+
+h2 {
+  color: white;
+  border-radius: 3px;
+  margin: auto;
+  background-color: #101a2b;
+  font-size: 22px;
+  padding: 5px;
+}
+
+#peace_content{
+  padding: 10px;
+  position: absolute;
+  overflow-y: auto;
+  top: 39px;
+}
