--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ body::-webkit-scrollbar-thumb:hover {
 
 #ch1_div,
 #ch2_div {
-  font-size: 24px;
+  font-size: 20px;
   text-align: center;
   margin: auto;
   text-align: center;
@@ -296,7 +296,7 @@ p {
 .additional-content {
   position: relative;
   text-align: right;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: none; */
   margin: 0px;
   padding-top: 0px;
 
@@ -451,7 +451,7 @@ g#voronoi2 {
 }
 
 a {
-  color: steelblue
+  color: rgb(101, 167, 222)
 }
 
 #info_button {
@@ -513,7 +513,6 @@ h2 {
   overflow-y: auto;
   top: 39px;
 }
-
 
 #peace_content::-webkit-scrollbar {
   width: 10px;
