--- a/css/style.css
+++ b/css/style.css
@@ -90,11 +90,11 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #000000;
 }
 
 body::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #252525;
 }
 
 body::-webkit-scrollbar-thumb:hover {
@@ -270,7 +270,7 @@ p {
   /* background-color: rgba(0, 0, 0, 0.5); */
   border-radius: 5px;
   /* box-shadow: 0px 1px 2px #232323, 0px -1px 2px #232323; */
-  padding-right: 10px;
+  padding-right: 20px;
   padding-top: 10px;
   text-align: right;
 }
@@ -318,7 +318,7 @@ p {
 
 .axisWhite path {
   stroke: gray;
-  opacity: 0;
+  /* opacity: 0; */
 }
 
 .axisWhite text {
@@ -384,8 +384,8 @@ p {
   position: absolute;
   left: 20px;
   z-index: 100;
-  width: 10px;
-  height: 2px;
+  /* width: 50px; */
+  height: 0px;
   background: red;
 }
 
